# DiffQ

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  setup.sh
.github/workflows/: build.yml  windows-build.yml
Builds/MacOSX/: Info-VST3.plist  Info-VST3_Manifest_Helper.plist
Builds/MacOSX/EQDiff.xcodeproj/: project.pbxproj
Builds/VisualStudio2022/: EQDiff.sln  EQDiff_SharedCode.vcxproj  EQDiff_SharedCode.vcxproj.filters  EQDiff_VST3.vcxproj  EQDiff_VST3.vcxproj.filters  EQDiff_VST3ManifestHelper.vcxproj  resources.rc
JUCE/modules/juce_audio_plugin_client/: juce_audio_plugin_client_VST3.cpp
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
VST_SDK/VST3_Project_Generator/Windows_Arm64/Resources/: Window.uidesc  links.json
VST_SDK/VST3_Project_Generator/Windows_Arm64/Resources/cmake/templates/vst3plugin_folder/: CMakeLists.txt.in
VST_SDK/VST3_Project_Generator/Windows_Arm64/Resources/cmake/templates/vst3plugin_folder/source/: version.h.in  vst3plugincontroller.cpp.in  vst3plugincontroller.h.in  vst3pluginentry.cpp.in
VST_SDK/VST3_Project_Generator/Windows_x64/Resources/cmake/templates/vst3plugin_folder/resource/: vst3plugineditor.uidesc.in
VST_SDK/VST3_Project_Generator/Windows_x64/Resources/cmake/templates/vst3plugin_folder/source/: vst3pluginprocessor.cpp.in  vst3pluginprocessor.h.in
VST_SDK/VST3_Project_Generator/macOS/VST3_Project_Generator.app/Contents/: CodeResources  Info.plist
VST_SDK/VST3_Project_Generator/macOS/VST3_Project_Generator.app/Contents/_CodeSignature/: CodeResources
build_win/: CMakeCache.txt
